--- a/nbs/deprecated/00_text_main_benchmark[DEPRECATED].ipynb
+++ b/nbs/deprecated/00_text_main_benchmark[DEPRECATED].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57f49353",
+   "id": "bfbacb85",
    "metadata": {},
    "source": [
     "# Text Processing Benchmark\n",
@@ -16,7 +16,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d269aadb",
+   "id": "a9542a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datasets                  2.14.4                   pypi_0    pypi\r\n",
+      "pytorch-ignite            0.4.11                   pypi_0    pypi\r\n",
+      "pytorch-lightning         2.0.1.post0              pypi_0    pypi\r\n",
+      "torch                     2.0.1+cu118              pypi_0    pypi\r\n",
+      "torchaudio                2.0.2+cu118              pypi_0    pypi\r\n",
+      "torchmetrics              1.1.1                    pypi_0    pypi\r\n",
+      "torchvision               0.15.2+cu118             pypi_0    pypi\r\n",
+      "transformers              4.31.0                   pypi_0    pypi\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda list | grep 'datasets\\|transformers\\|torch'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dda0c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ada3316",
+   "id": "20a659fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87be91e2",
+   "id": "e4df8dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e11df7",
+   "id": "358167f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56c3c509",
+   "id": "fe9d4322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67370f63",
+   "id": "f7200360",
    "metadata": {},
    "source": [
     "## Benchmark on medium-size dataset (~117k rows)"
@@ -110,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2555816f",
+   "id": "4fb66462",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f432cc2a",
+   "id": "6fad0a89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a3b3314",
+   "id": "fd88d006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2694a3e1",
+   "id": "cbb607f7",
    "metadata": {},
    "source": [
     "### Without iterable dataset"
@@ -168,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee2afa81",
+   "id": "bbb1e9c3",
    "metadata": {},
    "source": [
     "With filter"
@@ -177,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fff322dd",
+   "id": "efe84745",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5581f12d",
+   "id": "82d170be",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -284,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e86bebff",
+   "id": "e6421498",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d60f1b71",
+   "id": "94ed9d55",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -406,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d9b3378",
+   "id": "eb3e5f0e",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35badb5a",
+   "id": "9b5827c2",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + no shuffling"
@@ -586,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb89435",
+   "id": "a85ad979",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105b8b36",
+   "id": "780dee14",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -766,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98929869",
+   "id": "1837f5a3",
    "metadata": {},
    "outputs": [
     {
@@ -938,14 +963,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34952b10",
+   "id": "6482ac74",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "77192c32",
+   "id": "cd551032",
    "metadata": {},
    "source": [
     "### With iterable dataset"
@@ -953,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d949d330",
+   "id": "84dfc12a",
    "metadata": {},
    "source": [
     "With filter"
@@ -962,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c4934f3",
+   "id": "ceb02279",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16716a36",
+   "id": "0582ec48",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -1055,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad23610f",
+   "id": "e01b2eeb",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da83af35",
+   "id": "6278c9df",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -1163,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d181864",
+   "id": "e7ca9b92",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20003dcd",
+   "id": "e70e421b",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + no shuffling"
@@ -1329,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135bab38",
+   "id": "f1928cc1",
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4fc5aaf",
+   "id": "8909ead6",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -1495,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a067da7c",
+   "id": "668a4731",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1094f6",
+   "id": "e743540b",
    "metadata": {},
    "source": [
     "### With streaming (v1)"
@@ -1660,7 +1685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "202478d8",
+   "id": "b2c975e7",
    "metadata": {},
    "source": [
     "With filter"
@@ -1669,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a350e093",
+   "id": "5e6ed88c",
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52678d66",
+   "id": "86248ec4",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -1714,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753130a4",
+   "id": "561cc522",
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fbea86e",
+   "id": "ecf9ad39",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -1760,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b54140ee",
+   "id": "1aaa3e89",
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1249abc8",
+   "id": "a3459a86",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + no shuffling"
@@ -1808,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ef14a7",
+   "id": "c8cf93c4",
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b05f86f7",
+   "id": "a8c89f8f",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -1856,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0ccf6b",
+   "id": "b8aa59f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b1abc76",
+   "id": "d3deab1e",
    "metadata": {},
    "source": [
     "### With streaming (v2)"
@@ -1894,7 +1919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d88f39",
+   "id": "6585f656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e46ee744",
+   "id": "3a060a35",
    "metadata": {},
    "source": [
     "With filter"
@@ -1927,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101ff5e1",
+   "id": "78916f94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f154f9e",
+   "id": "1dd901e9",
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd45cbc0",
+   "id": "f14aed7b",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -1979,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1878773",
+   "id": "a41983e2",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8de420e0",
+   "id": "e78725a9",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -2022,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6716be85",
+   "id": "d0665ac7",
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f2b43a",
+   "id": "bf7c6144",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -2067,7 +2092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0df1c74",
+   "id": "2ebaf9d8",
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfee836",
+   "id": "681b8897",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2112,14 +2137,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956b27fb",
+   "id": "8e9aff0c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3b881408",
+   "id": "9b4c7685",
    "metadata": {},
    "source": [
     "### Test the effect of batch size and num_proc"
@@ -2127,7 +2152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70fbba07",
+   "id": "721ab5bf",
    "metadata": {},
    "source": [
     "Text processing + tokenization are the most time-consuming tasks, thus we will check how different batch size and num proc will affect these tasks' running time"
@@ -2136,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7ecbc9",
+   "id": "f55a5a34",
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f68ea03f",
+   "id": "77ba06b9",
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "652c6cca",
+   "id": "8335b90a",
    "metadata": {},
    "outputs": [
     {
@@ -2658,7 +2683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb58397e",
+   "id": "06599475",
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d2040ad",
+   "id": "1cb237d9",
    "metadata": {},
    "source": [
     "Conclusion: increase BOTH batch size and num_proc can help decrease the processing + tokenization time, but the relationship between batch size, num_proc and running time are not linear"
@@ -2840,7 +2865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e78c47bf",
+   "id": "cc561514",
    "metadata": {},
    "source": [
     "## Improving processing time with caching"
@@ -2848,7 +2873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c963238c",
+   "id": "7f8e5ba3",
    "metadata": {},
    "source": [
     "The worst processing time is recorded with an non-iterable training set, with the following preprocessing: 2-column filtering, 2-column metadatas, 2 content transformations, 2 content augmentation; the total preprocessing time is ~62s for 117k dataset. However, this results in the best data iteration time: 0.183s for going through 1280 items.\n",
@@ -2859,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3a77a0",
+   "id": "11c1b0ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2869,7 +2894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "348de3b7",
+   "id": "9f68fc54",
    "metadata": {},
    "outputs": [
     {
@@ -2924,7 +2949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d86cf25",
+   "id": "a4f94b7b",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -2932,7 +2957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bb4eb2f",
+   "id": "775347b4",
    "metadata": {},
    "source": [
     "With CPU batch size of 128, and data iteration of 1280 items (10 batches)"
@@ -2940,7 +2965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "592fefb5",
+   "id": "40cbb7b3",
    "metadata": {},
    "source": [
     "1. Time to process + tokenize. Unit: seconds\n",
@@ -2970,7 +2995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105bf61c",
+   "id": "d8b82b36",
    "metadata": {},
    "source": [
     "## Tips and tricks"
@@ -2978,7 +3003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "306a8329",
+   "id": "59290a5a",
    "metadata": {},
    "source": [
     "- For non-streaming data, the best way to minimize processing and iteration time is:\n",
@@ -2996,7 +3021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8430448",
+   "id": "4d29fcf8",
    "metadata": {},
    "outputs": [],
    "source": []
