--- a/nbs/deprecated/03_model_main[DEPRECATED].ipynb
+++ b/nbs/deprecated/03_model_main[DEPRECATED].ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Model Main Functions and Controller \n",
     "\n",
-    "> For an in-depth tutorial, click [here](https://anhquan0412.github.io/that-nlp-library/model_main_envibert.html)"
+    "> For an in-depth tutorial, click [here](https://anhquan0412.github.io/that-nlp-library/model_main_envibert.html)\n",
+    "\n",
+    "- skip_showdoc: true\n",
+    "- skip_exec: true"
    ]
   },
   {
