fix sidebar, shorten links, cleanup doc

--- a/nbs/00_text_main_benchmark.ipynb
+++ b/nbs/00_text_main_benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60547fd5",
+   "id": "5f13446e",
    "metadata": {},
    "source": [
     "# Text Processing Benchmark\n",
@@ -16,19 +16,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a07a79d",
+   "id": "e23fb688",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !conda list | grep 'datasets\\|transformers'\n",
-    "# datasets                  2.11.0                   pypi_0    pypi\n",
-    "# transformers              4.28.1                   pypi_0    pypi"
+    "# !conda list | grep 'datasets\\|transformers\\|torch'\n",
+    "# datasets                  2.14.4                   pypi_0    pypi\n",
+    "# pytorch-ignite            0.4.11                   pypi_0    pypi\n",
+    "# pytorch-lightning         2.0.1.post0              pypi_0    pypi\n",
+    "# torch                     2.0.1+cu118              pypi_0    pypi\n",
+    "# torchaudio                2.0.2+cu118              pypi_0    pypi\n",
+    "# torchmetrics              1.1.1                    pypi_0    pypi\n",
+    "# torchvision               0.15.2+cu118             pypi_0    pypi\n",
+    "# transformers              4.31.0                   pypi_0    pypi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eccd5c34",
+   "id": "47beed02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e473d77",
+   "id": "150046f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0504f25",
+   "id": "91f5993e",
    "metadata": {},
    "source": [
     "## Benchmark on medium-size dataset (~117k rows)"
@@ -68,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eecaa5a0",
+   "id": "6935569f",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba166813",
+   "id": "56ca3dec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3cdee5f",
+   "id": "fdbb1395",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e6ac5f",
+   "id": "60fefe2c",
    "metadata": {},
    "source": [
     "### Non-streaming dataset"
@@ -139,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33355fbe",
+   "id": "f13549e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb3b7445",
+   "id": "8092988b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,14 +187,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c687dc8",
+   "id": "1be3979b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "56031598",
+   "id": "732f1ae5",
    "metadata": {},
    "source": [
     "With filter"
@@ -197,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6677bd14",
+   "id": "f6d5c10e",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a68d2d",
+   "id": "6a1106fa",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -317,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf02abe1",
+   "id": "d2bc1873",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f3bad1",
+   "id": "8e6c44b6",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -452,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf2944b",
+   "id": "73a9e59a",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8379ff2",
+   "id": "cd562ab8",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + no shuffling"
@@ -645,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9049824a",
+   "id": "1698bbed",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cccf093e",
+   "id": "d264344e",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -824,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a37b6da",
+   "id": "eadd7eea",
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "774ec51a",
+   "id": "2d8a805c",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + iterate the whole dataset (1 epoch)"
@@ -1017,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a7089a8",
+   "id": "c3914495",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf037a0",
+   "id": "cd61ed47",
    "metadata": {},
    "outputs": [
     {
@@ -1223,14 +1229,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24bca66f",
+   "id": "552abad2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6c9b932e",
+   "id": "67a75695",
    "metadata": {},
    "source": [
     "### With streaming"
@@ -1239,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d2a210",
+   "id": "835d66b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b974a8cc",
+   "id": "d4aa94b1",
    "metadata": {},
    "source": [
     "With filter"
@@ -1272,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72b58fc7",
+   "id": "d685edb1",
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df06d695",
+   "id": "82a7108e",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation"
@@ -1316,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff352d23",
+   "id": "70408b6c",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58158748",
+   "id": "08216014",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation"
@@ -1361,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6653b8e3",
+   "id": "010c2d3d",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206229d4",
+   "id": "127c9677",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + higher batch size"
@@ -1408,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3aa7762",
+   "id": "66e595e4",
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d40885",
+   "id": "4f271a2d",
    "metadata": {},
    "source": [
     "With filter + metadatas concatenation + content transformation + content augmentation + iterate the whole dataset (1 epoch)"
@@ -1455,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d49f43",
+   "id": "1203f80d",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63f8a8c",
+   "id": "ab4ac257",
    "metadata": {},
    "source": [
     "### Test the effect of batch size and num_proc"
@@ -1501,7 +1507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6893cbfa",
+   "id": "ed6fb38d",
    "metadata": {},
    "source": [
     "For non-streaming dataste, text processing + tokenization are the most time-consuming tasks, thus we will check how different batch size and num proc will affect these tasks' running time"
@@ -1510,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389a76d8",
+   "id": "c3d5bb86",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdb78cd5",
+   "id": "d0fc2544",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76cba18a",
+   "id": "f6874cec",
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ace009b7",
+   "id": "377b7297",
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90887c31",
+   "id": "e6046519",
    "metadata": {},
    "source": [
     "Conclusion: increase BOTH batch size and num_proc can help decrease the processing + tokenization time, but the relationship between batch size, num_proc and running time are not linear"
@@ -2261,7 +2267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd7873c3",
+   "id": "854cbe0c",
    "metadata": {},
    "source": [
     "## Improving processing time with caching"
@@ -2269,7 +2275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1c898e3",
+   "id": "6f8bb4bf",
    "metadata": {},
    "source": [
     "The worst processing time is recorded with non-streaming training set, with the following preprocessing: 2-column filtering, 2-column metadatas, 2 content transformations, 2 content augmentation.\n",
@@ -2280,7 +2286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "349c7de7",
+   "id": "be1d87eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97a8c09f",
+   "id": "d6263b00",
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a1cbb9",
+   "id": "a0aafa14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2397,7 +2403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d025b3c",
+   "id": "3b286045",
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5f980a",
+   "id": "85ec570e",
    "metadata": {},
    "source": [
     "If you cached, then you only need 0.979s to load the data back from caches, instead of wait for 35.284s to do the process all over again"
@@ -2461,7 +2467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b938c259",
+   "id": "f3847540",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -2469,7 +2475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a19267b",
+   "id": "3435a149",
    "metadata": {},
    "source": [
     "| Process + Tokenize Time (117k records), batchsize = 1174 | Filter, train shuffling | And 2 metadatas | And 2 tfms + 2 augs | Batchsize=1174 x 3 | Batchsize=1174 |\n",
@@ -2481,7 +2487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71c90cd",
+   "id": "820af598",
    "metadata": {},
    "source": [
     "| Run 10 batches time (1174*10) | Filter, train shuffling | And 2 metadatas | And 2 tfms + 2 augs | Total items iterated: 1174 * 10 * 3 | 1 epoch iterated: 117430 items |\n",
@@ -2493,7 +2499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49405616",
+   "id": "d33af4b9",
    "metadata": {},
    "source": [
     "| Total Time (Process+Tokenize+Iterate) | Filter, train shuffling | And 2 metadatas | And 2 tfms + 2 augs | Total items iterated: 1174 * 10 * 3 | 1 epoch iterated: 117430 items |\n",
@@ -2505,7 +2511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1857bfd",
+   "id": "7ea0d976",
    "metadata": {},
    "source": [
     "| Total memory use                    | Filter, train shuffling | And 2 metadatas | And 2 tfms + 2 augs | Total items iterated: 1174 * 10 * 3 | 1 epoch iterated: 117430 items |\n",
@@ -2517,7 +2523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c1fa464",
+   "id": "11da1dee",
    "metadata": {},
    "source": [
     "## Tips and tricks"
@@ -2525,7 +2531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb0db40",
+   "id": "032219c0",
    "metadata": {},
    "source": [
     "- For non-streaming data, the best way to minimize processing and iteration time is:\n",
