--- a/nbs/deprecated/TextDataController[DEPRECATED].ipynb
+++ b/nbs/deprecated/TextDataController[DEPRECATED].ipynb
@@ -1,9 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b9b93d97",
+   "metadata": {},
+   "source": [
+    "# Text Data Controller\n",
+    "\n",
+    "> This module contains the old Python class for TextDataController\n",
+    "\n",
+    "- skip_showdoc: true\n",
+    "- skip_exec: true"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43657c3b",
+   "id": "e00d819a",
    "metadata": {},
    "outputs": [],
    "source": [
