--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -190,7 +190,7 @@
     "    \"\"\"\n",
     "    Return a dictionary of metric name and its values. Can handle both multiclass and multilabel    \n",
     "    \n",
-    "    Reference: https://github.com/huggingface/transformers/blob/dbc12269ed5546b2da9236b9f1078b95b6a4d3d5/src/transformers/trainer_utils.py#LL100C22-L100C22\n",
+    "    Reference: https://github.com/huggingface/transformers/blob/main/src/transformers/trainer_utils.py#L107C16-L107C16\n",
     "    \"\"\"\n",
     "    assert len(head_sizes)==len(label_names)\n",
     "    labels = pred.label_ids \n",
